--- a/Tutorials/invoke-llm.org
+++ b/Tutorials/invoke-llm.org
@@ -20,7 +20,7 @@ installed at mltgpu, but you can also get it up and running on your
 own machine. You can connect to mltgpu's ollama with this command:
 
 #+begin_src sh
-ssh -f -N -L 11434:127.0.0.1:11434 mltgpu
+ssh -f -N -p <ssh_port> -L 11434:127.0.0.1:11434 mltgpu
 #+end_src
 
 This command creates a background process which forward the port 11434
